{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 359,
  "lineage": "e5c6aa76-8453-1238-38be-144456f60431",
  "resources": [
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc416fa38dcf1495",
            "association_id": "eipassoc-0d790f07611d85ad2",
            "domain": "vpc",
            "id": "eipalloc-0cc416fa38dcf1495",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0196da4156c26c086",
            "private_dns": "ip-192-168-2-56.ec2.internal",
            "private_ip": "192.168.2.56",
            "public_dns": "ec2-54-80-8-19.compute-1.amazonaws.com",
            "public_ip": "54.80.8.19",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b14fb4592464174",
            "association_id": "eipassoc-077a6f02889ab31d4",
            "domain": "vpc",
            "id": "eipalloc-03b14fb4592464174",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0388edcb9784107b2",
            "private_dns": "ip-192-168-2-166.ec2.internal",
            "private_ip": "192.168.2.166",
            "public_dns": "ec2-18-210-109-154.compute-1.amazonaws.com",
            "public_ip": "18.210.109.154",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aft-vpc-igw",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:internet-gateway/igw-0ad1bb7f5883ba07c",
            "id": "igw-0ad1bb7f5883ba07c",
            "owner_id": "008298205562",
            "tags": {
              "Name": "aft-vpc-igw"
            },
            "tags_all": {
              "Name": "aft-vpc-igw",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc416fa38dcf1495",
            "connectivity_type": "public",
            "id": "nat-05f9eb504a339c46d",
            "network_interface_id": "eni-0196da4156c26c086",
            "private_ip": "192.168.2.56",
            "public_ip": "54.80.8.19",
            "subnet_id": "subnet-0b42a693e1ba0dbaf",
            "tags": {
              "Name": "aft-vpc-natgw-01"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-01",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b14fb4592464174",
            "connectivity_type": "public",
            "id": "nat-018b4ac35a56e419e",
            "network_interface_id": "eni-0388edcb9784107b2",
            "private_ip": "192.168.2.166",
            "public_ip": "18.210.109.154",
            "subnet_id": "subnet-0ba73cf3900ca8a7a",
            "tags": {
              "Name": "aft-vpc-natgw-02"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-02",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:route-table/rtb-09b8f1911445ace9b",
            "id": "rtb-09b8f1911445ace9b",
            "owner_id": "008298205562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f9eb504a339c46d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:route-table/rtb-0c3e7242b36dbc490",
            "id": "rtb-0c3e7242b36dbc490",
            "owner_id": "008298205562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018b4ac35a56e419e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:route-table/rtb-06cc7861901dc166a",
            "id": "rtb-06cc7861901dc166a",
            "owner_id": "008298205562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad1bb7f5883ba07c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d886f3e51a930798",
            "route_table_id": "rtb-09b8f1911445ace9b",
            "subnet_id": "subnet-066a1962f2cece8db"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3e4eb52e0b2c7c3",
            "route_table_id": "rtb-0c3e7242b36dbc490",
            "subnet_id": "subnet-041cf026a115900a6"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9557cf628de50dc",
            "route_table_id": "rtb-06cc7861901dc166a",
            "subnet_id": "subnet-0b42a693e1ba0dbaf"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ca186bf54b5813b",
            "route_table_id": "rtb-06cc7861901dc166a",
            "subnet_id": "subnet-0ba73cf3900ca8a7a"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_default_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:security-group/sg-0a7b6748a01d2169a",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7b6748a01d2169a",
            "ingress": [],
            "name": "aft-default-sg",
            "name_prefix": "",
            "owner_id": "008298205562",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_endpoint_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:security-group/sg-0bb4ee74d772979eb",
            "description": "Allow inbound HTTPS traffic and all Outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb4ee74d772979eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aft-endpoint-sg",
            "name_prefix": "",
            "owner_id": "008298205562",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:subnet/subnet-066a1962f2cece8db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066a1962f2cece8db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008298205562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:subnet/subnet-041cf026a115900a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041cf026a115900a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008298205562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:subnet/subnet-0b42a693e1ba0dbaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b42a693e1ba0dbaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008298205562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:subnet/subnet-0ba73cf3900ca8a7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba73cf3900ca8a7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008298205562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aft_vpc",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc/vpc-0d6124dadfcb57dd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-0a16ca44760a84389",
            "default_route_table_id": "rtb-0b71ceb7a15416952",
            "default_security_group_id": "sg-0cd954959a3990a01",
            "dhcp_options_id": "dopt-00ec80d612d1894c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6124dadfcb57dd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b71ceb7a15416952",
            "owner_id": "008298205562",
            "tags": {
              "Name": "aft-management-vpc"
            },
            "tags_all": {
              "Name": "aft-management-vpc",
              "managed_by": "AFT"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-097107fe9a58d73e8",
            "dns_entry": [
              {
                "dns_name": "vpce-097107fe9a58d73e8-v140bs50.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-097107fe9a58d73e8-v140bs50-us-east-1a.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-097107fe9a58d73e8-v140bs50-us-east-1b.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codebuild.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0927070101QRN5W6T0QP"
              }
            ],
            "id": "vpce-097107fe9a58d73e8",
            "network_interface_ids": [
              "eni-0d7ebc022d3ac1721",
              "eni-0fce7710f37b261d0"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.codebuild",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.codebuild",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codebuild"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-01c975530f5f63dfa",
            "dns_entry": [
              {
                "dns_name": "vpce-01c975530f5f63dfa-2uuf1573.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c975530f5f63dfa-2uuf1573-us-east-1a.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c975530f5f63dfa-2uuf1573-us-east-1b.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07736173GRHU59DIEQYL"
              }
            ],
            "id": "vpce-01c975530f5f63dfa",
            "network_interface_ids": [
              "eni-00021d9152979256d",
              "eni-075a4222916542d0a"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-0b873ca420cb97541",
            "dns_entry": [
              {
                "dns_name": "vpce-0b873ca420cb97541-85kx9mcm.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b873ca420cb97541-85kx9mcm-us-east-1b.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b873ca420cb97541-85kx9mcm-us-east-1a.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codepipeline.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02628245OEGRSZS0ISQ"
              }
            ],
            "id": "vpce-0b873ca420cb97541",
            "network_interface_ids": [
              "eni-04da78bc83a9ce672",
              "eni-0cb948d1d4927539d"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.codepipeline",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.codepipeline",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codepipeline"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-0d002fe8c12797b54",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-0d002fe8c12797b54",
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06cc7861901dc166a",
              "rtb-09b8f1911445ace9b",
              "rtb-0c3e7242b36dbc490"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-0abeea3c0bc5da1cd",
            "dns_entry": [
              {
                "dns_name": "vpce-0abeea3c0bc5da1cd-u95oyxyw.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0abeea3c0bc5da1cd-u95oyxyw-us-east-1b.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0abeea3c0bc5da1cd-u95oyxyw-us-east-1a.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "events.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0343446A4W0E5M6G3JV"
              }
            ],
            "id": "vpce-0abeea3c0bc5da1cd",
            "network_interface_ids": [
              "eni-004d25eff4d0121b3",
              "eni-0428b63332391051f"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.events",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.events",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.events"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git-codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-019aff270744bf515",
            "dns_entry": [
              {
                "dns_name": "vpce-019aff270744bf515-57ga3qd8.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-019aff270744bf515-57ga3qd8-us-east-1a.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-019aff270744bf515-57ga3qd8-us-east-1b.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "git-codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0926209316JVM99N3LKA"
              }
            ],
            "id": "vpce-019aff270744bf515",
            "network_interface_ids": [
              "eni-04e1024c05ba45402",
              "eni-06f737140dcbe02a7"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.git-codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.git-codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.git-codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-021755896865ce3b9",
            "dns_entry": [
              {
                "dns_name": "vpce-021755896865ce3b9-hdl4h56l.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-021755896865ce3b9-hdl4h56l-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-021755896865ce3b9-hdl4h56l-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09262193FUG3TKH2HBM6"
              }
            ],
            "id": "vpce-021755896865ce3b9",
            "network_interface_ids": [
              "eni-010658ad6fd72f452",
              "eni-08232f0a5da6ba7af"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.kms",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.kms"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-0e0bbb2976512327d",
            "dns_entry": [
              {
                "dns_name": "vpce-0e0bbb2976512327d-3rtg83qu.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e0bbb2976512327d-3rtg83qu-us-east-1b.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e0bbb2976512327d-3rtg83qu-us-east-1a.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "lambda.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03432556EWSFWBU8NI0"
              },
              {
                "dns_name": "lambda.us-east-1.api.aws",
                "hosted_zone_id": "Z03432542WF499C8SHNXD"
              }
            ],
            "id": "vpce-0e0bbb2976512327d",
            "network_interface_ids": [
              "eni-00a7a0deeeb560ed8",
              "eni-01023c4c62e0695ab"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.lambda",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.lambda"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-01a7b667ee9b913f3",
            "dns_entry": [
              {
                "dns_name": "vpce-01a7b667ee9b913f3-r7rgueye.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01a7b667ee9b913f3-r7rgueye-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01a7b667ee9b913f3-r7rgueye-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03436181J526HYU0UO5K"
              }
            ],
            "id": "vpce-01a7b667ee9b913f3",
            "network_interface_ids": [
              "eni-07362f756a21a9ae2",
              "eni-0f0aee25c514d7ee7"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.logs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.logs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-016cfe6321a78150d",
            "cidr_blocks": [
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-016cfe6321a78150d",
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06cc7861901dc166a",
              "rtb-09b8f1911445ace9b",
              "rtb-0c3e7242b36dbc490"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-06de0772477ee3e93",
            "dns_entry": [
              {
                "dns_name": "vpce-06de0772477ee3e93-pf9lq9w6.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06de0772477ee3e93-pf9lq9w6-us-east-1b.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06de0772477ee3e93-pf9lq9w6-us-east-1a.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "servicecatalog.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03436062ML8J45G51WU3"
              }
            ],
            "id": "vpce-06de0772477ee3e93",
            "network_interface_ids": [
              "eni-00d10b2898c1315c7",
              "eni-0c2b68af93bfa32e2"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.servicecatalog",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.servicecatalog",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.servicecatalog"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-0314e5487e4fb7e2c",
            "dns_entry": [
              {
                "dns_name": "vpce-0314e5487e4fb7e2c-fi6drjm1.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0314e5487e4fb7e2c-fi6drjm1-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0314e5487e4fb7e2c-fi6drjm1-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sns.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09264641XDCGCNUGL9I9"
              }
            ],
            "id": "vpce-0314e5487e4fb7e2c",
            "network_interface_ids": [
              "eni-0610add7e75919643",
              "eni-061e9b42080bfc7b4"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.sns",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sns"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-0e6d5523afa665c80",
            "dns_entry": [
              {
                "dns_name": "vpce-0e6d5523afa665c80-vblmdn1h.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e6d5523afa665c80-vblmdn1h-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e6d5523afa665c80-vblmdn1h-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03369682WYKXNA1T0EZM"
              }
            ],
            "id": "vpce-0e6d5523afa665c80",
            "network_interface_ids": [
              "eni-06168ace93c1189b2",
              "eni-0d76fab76762b52e2"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.sqs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sqs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-01e12c786147fb274",
            "dns_entry": [
              {
                "dns_name": "vpce-01e12c786147fb274-iew0wfpz.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01e12c786147fb274-iew0wfpz-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01e12c786147fb274-iew0wfpz-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0336718G8973T61L2L7"
              }
            ],
            "id": "vpce-01e12c786147fb274",
            "network_interface_ids": [
              "eni-0b47196faa1313167",
              "eni-0d9f7235659c4cc38"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.ssm",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.ssm"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-04c14e9ad4485b84a",
            "dns_entry": [
              {
                "dns_name": "vpce-04c14e9ad4485b84a-dhxpk9d0.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04c14e9ad4485b84a-dhxpk9d0-us-east-1b.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04c14e9ad4485b84a-dhxpk9d0-us-east-1a.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "states.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0269441EICE6LSHHMF3"
              }
            ],
            "id": "vpce-04c14e9ad4485b84a",
            "network_interface_ids": [
              "eni-021c0537950d114f4",
              "eni-0b556bab50ff3053c"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.states",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.states",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.states"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008298205562:vpc-endpoint/vpce-009d29247fddc1f8f",
            "dns_entry": [
              {
                "dns_name": "vpce-009d29247fddc1f8f-yut5as4g.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-009d29247fddc1f8f-yut5as4g-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-009d29247fddc1f8f-yut5as4g-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03360172MHTY20ORIHPD"
              }
            ],
            "id": "vpce-009d29247fddc1f8f",
            "network_interface_ids": [
              "eni-06042d3eb106acb29",
              "eni-08eec0938e6f5f28a"
            ],
            "owner_id": "008298205562",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bb4ee74d772979eb"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-041cf026a115900a6",
              "subnet-066a1962f2cece8db"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6124dadfcb57dd8"
          },
          "dependencies": [
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnet_ids.sts",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sts"
          ]
        }
      ]
    }
  ]
}